<resources>
    <string name="app_name">PDFViewer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="recent_files"><u>Recent</u></string>
    <string name="select_items">Select Item</string>
    <string name="no_recent_file">No Recent File !!</string>
    <string name="view_all_files_from_storage">View All files from Storage</string>
    <string name="all_files">All Files</string>
    <string name="type_here">Type here ......</string>
    <string name="title">Title ......</string>
    <string name="create_pdf">Create Pdf</string>
    <string name="pdf_name">PDf Name</string>
    <string name="path">/path</string>
    <string name="ryan_samte">Pdf Reader</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="sign_in_to_do_more">Sign In to do More</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="sign_in_with_facebook">Sign in with Facebook</string>
    <string name="register_with_pdfview">Register with PDFView</string>
    <string name="already_have_an_pdfview_id">Already Have PDFViewer Id?</string>
    <string name="sign_in_or_sign_up">Sign in</string>
    <string name="pdftoword">PDF-Text</string>
    <string name="newpdf">New-PDF</string>
    <string name="pdftoimage">PDF-Image</string>
    <string name="splitpdf">Split-PDF</string>
    <string name="combinepdf">Combine-PDF</string>
    <string name="imagetopdf">Image-PDF</string>
    <string name="protect">Lock-PDF</string>
    <string name="unlock">Unlock-PDF</string>
    <string name="water_mark">WaterMark-PDF</string>
    <string name="pdfview_from_codnow">PdfViewer @ codNow</string>
    <string name="file_path">File Path</string>
    <string name="share">Share</string>
    <string name="delete_file">Delete File</string>
    <string name="are_your_sure_to_clear_list">Are Your Sure To Clear List</string>
    <string name="yes">Yes</string>
    <string name="cancel">Cancel</string>
    <string name="folder_name">Folder Name</string>
    <string name="protected_file">Protected File</string>
    <string name="please_enter_your_password_to_view_this_file">Please enter your password to view this file</string>
    <string name="enter_your_password">Enter Your Password</string>
    <string name="wrong_password_try_again">Wrong Password ! try again ?</string>
    <string name="please_enter_your_password">Please enter your password</string>
    <string name="ok">OK</string>
    <string name="_1245kb">1245kb</string>
    <string name="please_wait">Please wait....</string>
    <string name="pdf_date">PDF Dec 17, 2022</string>
    <string name="delete">Delete</string>
    <string name="view_your_file_click_here">View Your file, Click here</string>
    <string name="no">No</string>
    <string name="clear"><u>Clear:</u></string>
    <string name="search_files">Search files</string>
    <string name="word_convert_success">Converted To Word Document Successfully</string>
    <string name="word_question">Do you want to convert more files to documents?</string>
    <string name="word_converting">Converting File....</string>
    <string name="file_not_covertible">This file cannot be converted to a Word document. Please select a different file and try again</string>
    <string name="please_note_that_the_converted_document_may_differ_in_formatting_compared_to_the_original">Please note that the converted document may differ in formatting compared to the original.</string>
    <string name="your_recent_file_views_will_displayed_here_for_quick_reference">Your recent file views will displayed here for quick reference.</string>
    <string name="split_success">Document Split Successfully</string>
    <string name="split_progress">Splitting  File....</string>
    <string name="spliting_question">Are you sure to split this file</string>
    <string name="split_title">Split Pdf Document</string>
    <string name="rename_progress">Renaming File....</string>
    <string name="rename_success">Renamed Successfully</string>
    <string name="rename_saving_place">Your renamed file is saved in RenameFile Folder</string>
    <string name="removed_title">Removed Password</string>
    <string name="enter_password_question">Please enter your password to unlock</string>
    <string name="unlock_progress">Removing  File Password....</string>
    <string name="unlocked_success">Document Removed Password Successfully</string>
    <string name="unlock_question">Do you want to remove password protection from another files?</string>
    <string name="extract_success">Extract Images Successfully</string>
    <string name="extract_question">Would you like to extract more?</string>
    <string name="extract_progress">Extracting Images....</string>
    <string name="extract_title">Extract Image(s)</string>
    <string name="extract_continue">Continue</string>
    <string name="extract_info">Extract Image(s) from PDF</string>
    <string name="mark_progress">Marking File....</string>
    <string name="word_title">Converter</string>
    <string name="word_continue">Continue</string>
    <string name="word_info">Convert to Word Document</string>
    <string name="new_file_success">New Document created Successfully</string>
    <string name="new_file_question">Do you want to create more Pdf ?</string>
    <string name="new_file_progress">Creating  File....</string>
    <string name="images_success">Converted Successfully</string>
    <string name="images_question">Do you want to convert more images?</string>
    <string name="images_progress">Converting Images.....</string>
    <string name="delete_file_title">Delete File</string>
    <string name="delete_question">Are You Sure to Delete ?</string>
    <string name="file_lock_info">This PDF file is protected. Please unlock it first</string>
    <string name="select_request">Please select at least one</string>
    <string name="snake_bar_success">File Deleted Success</string>
    <string name="snake_bar_fail">File Deleted Fail</string>
    <string name="are_you_sure">Are you sure to Delete this file</string>
    <string name="welcome_notes">Welcome to our PDF reader and tools,\n enjoy the features!</string>
    <string name="combine_success">Pdf Combined Successfully !!</string>
    <string name="combine_question">Do you want to combine more ?</string>
    <string name="select_file">Select File</string>
    <string name="choose_atliest">Choose atleast one file</string>
    <string name="combine">Combine</string>
    <string name="no_image_found">No image found in this file</string>
    <string name="encrypted_dialog">Locking File....</string>
    <string name="watermark_title">Watermark Pdf</string>
    <string name="watermark_text">Enter Your Water Mark Signature</string>
    <string name="watermark_success">Watermarked Successfully</string>
    <string name="watermark_failed">Marking Failed</string>
    <string name="merge_title">Pdf Merge</string>
    <string name="merged_request">Please enter your file name</string>
    <string name="merge_dialog">Combining Pdf....</string>
    <string name="enter_file_name">Please enter file name</string>
    <string name="please_write_something">Please write something</string>
    <string name="file_not_protected">This PDF file is not password-protected</string>
    <string name="file_is_protect">\"File is protected \"</string>
    <string name="file_without_image">This file does not contain image</string>
    <string name="incorrect_passwored">Incorrect password</string>

    <string name="mode_unlimited">Unlimited</string>
    <string name="mode_motion">Motion</string>
    <string name="mode_photo">Photo</string>
    <string name="mode_night">Night</string>
    <string name="mode_video">Video</string>
    <string name="crop">Crop</string>
    <string name="convert_button">Convert</string>
    <string name="right">Right</string>
    <string name="left">Left</string>
    <string name="converter">Converter</string>
    <string name="select_image">Select Image</string>
    <string name="request_filename">Please enter your file name</string>
    <string name="select_first">Please Select First</string>
    <string name="select_first_crop">please select first</string>
    <string name="enter_name">Please enter your file name</string>
    <string name="pdf_merge">Pdf Merge</string>
    <string name="select_one">Please select atleast one</string>
    <string name="downloads">Downloads</string>
    <string name="todo">TODO</string>
    <string name="camera_photo">PHOTO</string>
    <string name="folders">Folders</string>
    <string name="extracted_images">Extracted Images</string>
    <string name="pdf_tools">PDF Tools</string>
    <string name="drag_and_swap_the_position">Hold - Drag and swap the position</string>
    <string name="ai_mode">Ai Mode</string>
    <string name="scanner">Scanner</string>
    <string name="search">Search</string>
    <string name="folder">Folder</string>
    <string name="documents">Documents</string>
    <string name="no_of_files">no. of Files</string>
    <string name="zero">0</string>
    <string name="extracted_text">Extracted Text</string>
    <string name="convert_pdf">Converted PDF</string>
    <string name="locked_pdf">Locked PDF</string>
    <string name="combined_pdf">Combined PDF</string>
    <string name="unlocked_pdf">Unlocked PDF</string>
    <string name="split_pdf">Split PDF</string>
    <string name="marked_pdf">Marked PDF</string>
    <string name="sub_folders">Sub Folders</string>
    <string name="please_wait_dialog">Please wait .......</string>
    <string name="crop_rotate">Crop/Rotate</string>
    <string name="select">Select</string>
    <string name="flip">Flip</string>
    <string name="select_only_one">Select only one to crop image</string>
    <string name="type_your_filename">Type your filename</string>
    <string name="rename_file">Rename File</string>
    <string name="you_can_convert_upto_20_images_at_a_time">You can convert upto 20 images at a time</string>
    <string name="image_continue">Continue</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="camera">Camera</string>
    <string name="please_use_this_app_n_camera_to_reduce_file_size">(Use app camera\n to reduce file size)</string>

</resources>