<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_margin="5dp"
    android:background="@drawable/popup_background"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/warning_background"
            android:id="@+id/first_linear"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/textTitle"
                android:padding="10dp"
                android:text="@string/protected_file"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:fontFamily="@font/montserrat"
                android:layout_marginStart="20dp"
                android:textStyle="bold" />
            <ImageView
                android:id="@+id/close_btn"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:visibility="gone"
                android:layout_marginEnd="10dp"
                android:layout_gravity="center_vertical"
                android:contentDescription="@string/app_name"
                android:src="@drawable/ic_baseline_close_24"
                app:tint="@color/image_color" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_below="@id/first_linear"
            android:background="@color/primary"
            android:id="@+id/second_linear">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="20dp"
                android:textStyle="italic"
                android:textSize="15sp"
                android:fontFamily="@font/josefont"
                android:id="@+id/advice_text"
                android:text="@string/please_enter_your_password_to_view_this_file"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/pwdText"
                android:hint="@string/enter_your_password"
                android:layout_marginStart="40dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="40dp"
                android:textColor="@color/text_color"
                android:inputType="textPassword"
                android:background="@drawable/edit_input"
                android:padding="10dp"
                android:textSize="16sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wrong_password_try_again"
                android:layout_marginStart="40dp"
                android:textStyle="italic"
                android:textSize="12sp"
                android:textColor="@color/Red_color"
                android:visibility="gone"
                android:id="@+id/msg_text"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/please_enter_your_password"
                android:layout_marginStart="40dp"
                android:textStyle="italic"
                android:textSize="12sp"
                android:textColor="@color/Red_color"
                android:visibility="gone"
                android:layout_marginTop="10dp"
                android:id="@+id/blank_text"/>



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="30dp"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatButton
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_weight="1"
                    android:id="@+id/buttonNo"
                    android:layout_marginStart="40dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/button_primary_dark"
                    android:textColor="@color/text_color"
                    android:text="@string/cancel"
                    android:elevation="10dp"
                    android:textSize="14sp" />
                <androidx.appcompat.widget.AppCompatButton
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_weight="1"
                    android:id="@+id/buttonYes"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="40dp"
                    android:layout_marginBottom="10dp"
                    android:text="@string/ok"
                    android:elevation="10dp"
                    android:background="@drawable/button_primary_dark"
                    android:textColor="@color/text_color"
                    android:textSize="14sp" />

            </LinearLayout>


        </LinearLayout>
    </LinearLayout>

</RelativeLayout>