<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary"
    tools:context=".tools.NewPdfFileActivity">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/primary"
        app:titleTextAppearance="@style/ToolbarTitleTextAppearance"
        android:id="@+id/toolbar">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="New Pdf Document"
            android:fontFamily="@font/montserrat"
            android:textStyle="bold"
            android:textSize="18sp"/>
    </androidx.appcompat.widget.Toolbar>

    <EditText
        android:id="@+id/editText"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_below="@id/toolbar"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="15dp"
        android:background="@drawable/edit_input"
        android:cursorVisible="true"
        android:hint="@string/type_here"
        android:padding="15dp"
        android:focusable="true"
        android:textStyle="bold"
        android:textSize="18sp"
        android:fontFamily="@font/montserrat"
        android:textColor="@color/text_color"
        android:textCursorDrawable="@drawable/cursor_colour" />

    <EditText
        android:id="@+id/titleText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/editText"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="15dp"
        android:background="@drawable/edit_input"
        android:cursorVisible="true"
        android:hint="@string/title"
        android:padding="15dp"
        android:textStyle="bold"
        android:textSize="18sp"
        android:fontFamily="@font/montserrat"
        android:textColor="@color/text_color"
        android:textCursorDrawable="@drawable/cursor_colour" />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/create_pdf"
        android:background="@drawable/button_primary_dark"
        android:textColor="@color/blue"
        android:layout_below="@id/titleText"
        android:layout_margin="15dp"
        android:id="@+id/createButton"/>

</RelativeLayout>