<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary"
    tools:context=".view.ProfileActivity">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/toolbar">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageView"
            android:src="@drawable/ic_baseline_arrow_back_24"
            app:tint="@color/image_color" />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_dot_vertical"
            android:layout_gravity="end"
            android:layout_marginEnd="10dp" />

    </androidx.appcompat.widget.Toolbar>
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="5dp"
        android:layout_below="@id/toolbar"
        android:visibility="gone"
        app:cardCornerRadius="15dp"
        app:cardBackgroundColor="@color/primaryDark"
        android:elevation="15dp"
        android:id="@+id/cardView">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:background="@drawable/small_background2"
            android:orientation="vertical">

            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:src="@drawable/profile_icon"
                android:layout_gravity="center_horizontal" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ryan_samte"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/text_color"
                android:textStyle="bold"
                android:textSize="18sp"
                android:fontFamily="@font/josefont" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="ryansamte@gmail.com"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/text_color"
                android:textStyle="italic"
                android:textSize="12sp"
                android:fontFamily="@font/montserrat" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/edit_profile"
                android:layout_marginTop="10dp"
                android:drawableStart="@drawable/ic_baseline_edit_24"
                android:textSize="14sp"
                android:paddingStart="15dp"
                android:paddingTop="5dp"
                android:paddingEnd="15dp"
                android:textColor="@color/white"
                android:fontFamily="@font/montserrat"
                android:background="@drawable/button_background"
                android:textStyle="bold" />

        </LinearLayout>


    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbar"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_in_to_do_more"
                android:textSize="18sp"
                android:textColor="@color/text_color"
                android:fontFamily="@font/josefont"
                android:gravity="center_horizontal" />

        </LinearLayout>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="200dp"
            android:src="@drawable/app_image"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/button_background"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:padding="2dp"
                android:layout_marginStart="25dp"
                android:src="@drawable/gmail_icon" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_in_with_google"
                android:textColor="@color/white"
                android:fontFamily="@font/montserrat"
                android:textStyle="bold"
                android:layout_marginStart="15dp"
                android:textSize="15sp"
                android:layout_gravity="center_vertical" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/button_background2"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:padding="3dp"
                android:layout_marginStart="25dp"
                android:src="@drawable/facebook_icon" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_in_with_facebook"
                android:textColor="@color/white"
                android:fontFamily="@font/montserrat"
                android:textStyle="bold"
                android:layout_marginStart="15dp"
                android:textSize="15sp"
                android:layout_gravity="center_vertical" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/button_background4"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:padding="2dp"
                android:layout_marginStart="25dp"
                android:src="@drawable/registration_icon" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register_with_pdfview"
                android:textColor="@color/white"
                android:fontFamily="@font/montserrat"
                android:textStyle="bold"
                android:layout_marginStart="15dp"
                android:textSize="15sp"
                android:layout_gravity="center_vertical" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/already_have_an_pdfview_id"
            android:textColor="@color/text_color"
            android:textSize="16sp"
            android:fontFamily="@font/josefont"
            android:layout_marginTop="25dp"
            android:layout_gravity="center_horizontal" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/sign_in_or_sign_up"
            android:layout_marginTop="10dp"
            android:textSize="16sp"
            android:paddingStart="35dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:paddingEnd="35dp"
            android:textColor="@color/white"
            android:fontFamily="@font/montserrat"
            android:background="@drawable/button_background"
            android:textStyle="bold" />



    </LinearLayout>

    <ImageView
        android:id="@+id/floatingBtn"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_gravity="center_horizontal"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="65dp"
        android:background="@drawable/rounded_background"
        android:elevation="10dp"
        android:padding="10dp"
        android:src="@drawable/ic_baseline_edit_note_24"
        app:tint="@color/white" />



</RelativeLayout>