<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:background="@drawable/popup_background"
    android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/warning_background"
        android:id="@+id/first_linear"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/textTitle"
            android:text="@string/rename_file"
            android:layout_marginStart="10dp"
            android:fontFamily="@font/montserrat"
            android:padding="10dp"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:textStyle="bold" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/type_your_filename"
        android:textColor="@color/text_color"
        android:layout_below="@id/first_linear"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:textSize="16sp"
        android:fontFamily="@font/josefont"
        android:id="@+id/text1" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/edit_input"
        android:padding="10dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="15dp"
        android:layout_below="@id/text1"
        android:id="@+id/rename_text"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="10dp"
        android:layout_below="@id/rename_text"
        android:weightSum="2"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:text="@string/cancel"
            android:textAllCaps="false"
            android:textColor="@color/Red_color"
            android:layout_marginBottom="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/button_primary_dark"
            android:id="@+id/cancel_button"/>
        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:text="Save"
            android:textAllCaps="false"
            android:layout_marginBottom="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:textColor="@color/blue"
            android:background="@drawable/button_primary_dark"
            android:id="@+id/save_button"/>


        </LinearLayout>


</RelativeLayout>